[package] # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
name   	= "asm4ahk"
version	= "0.1.0"
edition	= "2021"
build  	= "build.rs"

[workspace]
members = ["helper"]	# relative to the workspace root

[lib]
name      	= "asm4ahk_lib"
path      	= "src/asm4ahk.lib.rs"
crate-type	= ['lib',"cdylib"]

[[bin]]
name	= "asm4ahk_bin"
path	= "src/asm4ahk.bin.rs"

[dependencies]
helper       	= {path="helper"}
fancy-regex  	= "0.11.0"
widestring   	= "1.0.2"
phf          	= {version="0.11",features=["macros"]}
indexmap     	= "2.0.0"
redb         	= "1.1.0"
rkyv         	= {version="0.7.42",features=["validation"]}
rkyv_wrappers	= {git="https://github.com/rkyv/rkyv_contrib",version="0.1.0"}
seahash      	= "4.1.0"
thiserror    	= "1.0.48"
memmap2      	= "0.7.1"
mmap-sync    	= "1.0.1"
aho-corasick 	= "1.1.0"
chrono       	= "0.4.31"

[dependencies.windows]
version 	= "0.48"
features	= [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse", # active window
]

[build-dependencies]
helper       	= {path="helper"}
phf          	= {version="0.11.1",default-features=false} # generate Rust source for PHF data structures at compile time
phf_codegen  	= "0.11.1"
indexmap     	= "2.0.0"
redb         	= "1.1.0"
rkyv         	= {version="0.7.42",features=["validation"]}
rkyv_wrappers	= {git="https://github.com/rkyv/rkyv_contrib",version="0.1.0"}
seahash      	= "4.1.0"
thiserror    	= "1.0.48"
memmap2      	= "0.7.1"
mmap-sync    	= "1.0.1"

[build-dependencies.windows]
version 	= "0.48"
features	= [
  "Win32_Globalization",
]

[patch.crates-io]
mmap-sync	= {git="https://github.com/eugenesvk/mmap-sync",branch="win"}

[profile.release]
# opt        	for      	size
strip        	= true   	# Auto strip symbols from the binary (included by default on Linux/macOS)
opt-level    	= "z"    	# |3|     optimize for size
lto          	= true   	# |false| Sets link-time optimization.
codegen-units	= 1      	# |16|    reduce parallel code generation
panic        	= "abort"	# |unwind| save ~20k w/o drop-on-panic cleanup and std::panic::catch_unwind
